# EasyLinkSDK

./: .clang-format  .clang-tidy  .env  .gitignore  CMakeLists.txt  Doxyfile  EasyLink.cpp  EasyLink.h  LICENSE  README.md  coverage.sh  easy_link_c.cpp  easy_link_c.h  fix_permissions_linux  justfile
.github/workflows/: build.yml
doxygen/: README.md  header.html
doxygen-awesome-css/: README.md
sdk/: CMakeLists.txt  EasyLink.cpp  EasyLink.h  easy_link_c.cpp  easy_link_c.h
src/: CMakeLists.txt  main.c
